--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -59,8 +59,10 @@
   }
 }
 
-.home__hero,
-.container--public-form {
+.homepage {
   position: relative;
-  background: linear-gradient(135deg, #b1318f 0%, #2b00b0 100%);
+  background-image: url('/img/background.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
